# perfopt-homework

./: .gitignore  README.md  index.html  report.ipynb  report_charts.html  requirements.txt
.virtual_documents/: report.ipynb
bouncycastle-benchmark/: README.md  dependency-reduced-pom.xml  pom.xml  results.json
bouncycastle-benchmark/src/main/java/benchmarks/: BouncyCastleProviderUtil.java  ChaCha20.java  RsaBenchmark.java  Sha256Benchmark.java
chacha-naive-cpp/: CMakeLists.txt  ChaCha.hpp  README.md  chacha_benchmark.cpp  main.cpp  results.json  test_chacha20.cpp  test_chacha20.hpp  test_main.cpp
node-benchmarks/: ChaCha20Benchmark.ts  README.md  RsaBenchmark.ts  Sha256Benchmark.ts  benchmark-common.ts  package-lock.json  package.json  tsconfig.json
node-benchmarks/results/: chacha20-benchmark-results.json  rsa-benchmark-results.json  sha256-report.json
openssl-cpp-benchmark/: CMakeLists.txt  README.md  chacha20_benchmark.cpp  main.cpp  main.h  results.json  rsa_benchmark.cpp  sha256_benchmark.cpp
openssl-cpp-benchmark/scratch/: test_chacha.cpp
slides/: index.html
